--- a/EagleSocial/View/AboutMeCell/AboutMeCell.xib
+++ b/EagleSocial/View/AboutMeCell/AboutMeCell.xib
@@ -12,39 +12,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AboutMeCell" rowHeight="102" id="KGk-i7-Jjw" customClass="AboutMeCell" customModule="EagleSocial" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="102"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AboutMeCell" rowHeight="153" id="KGk-i7-Jjw" customClass="AboutMeCell" customModule="EagleSocial" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="101.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="152.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Me:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5Y-XS-hQS">
-                        <rect key="frame" x="0.0" y="0.0" width="99" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description Goes Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="62" translatesAutoresizingMaskIntoConstraints="NO" id="Qus-Zw-wnR">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description Goes Here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="62" translatesAutoresizingMaskIntoConstraints="NO" id="Qus-Zw-wnR">
                         <rect key="frame" x="0.0" y="22" width="320" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                        <color key="textColor" red="1" green="0.75686274509999996" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <size key="shadowOffset" width="0.0" height="0.0"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Posts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqY-J5-H53">
+                        <rect key="frame" x="126" y="131" width="69" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Me:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5Y-XS-hQS">
+                        <rect key="frame" x="111" y="0.0" width="99" height="21"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                        <color key="textColor" red="1" green="0.75686274509999996" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" red="0.25879859919999998" green="0.25884008409999998" blue="0.25878548620000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Iq1-0d-zpM"/>
-                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="UrA-70-sN0"/>
-                    <constraint firstAttribute="bottom" secondItem="Qus-Zw-wnR" secondAttribute="bottom" constant="58.5" id="j7M-TG-g9y"/>
-                    <constraint firstAttribute="trailing" secondItem="j5Y-XS-hQS" secondAttribute="trailing" constant="221" id="oAm-4a-HMJ"/>
-                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="rtV-au-f8e"/>
-                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="top" secondItem="j5Y-XS-hQS" secondAttribute="bottom" constant="1" id="uBL-Wk-gUh"/>
-                    <constraint firstAttribute="trailing" secondItem="Qus-Zw-wnR" secondAttribute="trailing" id="yZ6-MX-PaW"/>
+                    <constraint firstItem="RqY-J5-H53" firstAttribute="top" secondItem="Qus-Zw-wnR" secondAttribute="bottom" constant="88" id="2KJ-eV-nGM"/>
+                    <constraint firstAttribute="trailing" secondItem="RqY-J5-H53" secondAttribute="trailing" constant="125" id="2v1-uR-oAv"/>
+                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="74m-5u-CwU"/>
+                    <constraint firstItem="RqY-J5-H53" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="126" id="8DM-og-6ci"/>
+                    <constraint firstAttribute="trailing" secondItem="j5Y-XS-hQS" secondAttribute="trailing" constant="110" id="AdB-SA-632"/>
+                    <constraint firstAttribute="trailing" secondItem="Qus-Zw-wnR" secondAttribute="trailing" id="IEy-Uw-hqC"/>
+                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="top" secondItem="j5Y-XS-hQS" secondAttribute="bottom" constant="1" id="Nfn-sv-jMx"/>
+                    <constraint firstAttribute="bottom" secondItem="RqY-J5-H53" secondAttribute="bottom" constant="0.5" id="SHs-Pg-GZX"/>
+                    <constraint firstAttribute="bottom" secondItem="Qus-Zw-wnR" secondAttribute="bottom" constant="109.5" id="dam-HY-X5Y"/>
+                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nMG-LH-hLS"/>
+                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="111" id="opJ-QA-2NQ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="35" y="104"/>
+            <connections>
+                <outlet property="aboutMeLabel" destination="j5Y-XS-hQS" id="59b-lK-ubR"/>
+                <outlet property="descriptionLabel" destination="Qus-Zw-wnR" id="byL-9A-Fkn"/>
+            </connections>
+            <point key="canvasLocation" x="35" y="129.5"/>
         </tableViewCell>
     </objects>
 </document>
