--- a/EagleSocial/View/Main.storyboard
+++ b/EagleSocial/View/Main.storyboard
@@ -129,14 +129,14 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fVS-2S-AGZ">
-                                <rect key="frame" x="0.0" y="347" width="375" height="234"/>
+                                <rect key="frame" x="0.0" y="310" width="375" height="271"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="profileCell" rowHeight="66" id="ibk-y0-Jvh">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="66"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="profileCell" rowHeight="125" id="ibk-y0-Jvh">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ibk-y0-Jvh" id="iMe-PD-JgY">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="65.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="124.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -148,12 +148,12 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.25879859924316406" green="0.25884008407592773" blue="0.25878548622131348" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ImU-5l-NLk" firstAttribute="centerY" secondItem="iiK-ik-Yfd" secondAttribute="centerY" constant="-122" id="1gH-UK-2lR"/>
                             <constraint firstItem="3Es-8i-6R4" firstAttribute="leading" secondItem="wbc-bt-LM8" secondAttribute="leading" constant="61" id="4dD-Rb-hyQ"/>
                             <constraint firstItem="9bN-4W-Dks" firstAttribute="centerY" secondItem="iiK-ik-Yfd" secondAttribute="centerY" constant="-49" id="JvN-me-Sdi"/>
-                            <constraint firstItem="fVS-2S-AGZ" firstAttribute="top" secondItem="9bN-4W-Dks" secondAttribute="bottom" constant="52" id="JwS-9a-Ekw"/>
+                            <constraint firstItem="fVS-2S-AGZ" firstAttribute="top" secondItem="9bN-4W-Dks" secondAttribute="bottom" constant="15" id="JwS-9a-Ekw"/>
                             <constraint firstItem="fVS-2S-AGZ" firstAttribute="leading" secondItem="iiK-ik-Yfd" secondAttribute="leading" id="RGi-Ng-afG"/>
                             <constraint firstItem="wbc-bt-LM8" firstAttribute="trailing" secondItem="m4T-3b-JKb" secondAttribute="trailing" constant="110" id="SxH-7o-Ucp"/>
                             <constraint firstItem="ImU-5l-NLk" firstAttribute="top" secondItem="m4T-3b-JKb" secondAttribute="bottom" constant="20.5" id="VDD-eN-uvq"/>
