--- a/EagleSocial/View/AboutMeCell/AboutMeCell.xib
+++ b/EagleSocial/View/AboutMeCell/AboutMeCell.xib
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AboutMeCell" rowHeight="153" id="KGk-i7-Jjw" customClass="AboutMeCell" customModule="EagleSocial" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="153"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AboutMeCell" rowHeight="105" id="KGk-i7-Jjw" customClass="AboutMeCell" customModule="EagleSocial" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="152.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="104.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description Goes Here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="62" translatesAutoresizingMaskIntoConstraints="NO" id="Qus-Zw-wnR">
-                        <rect key="frame" x="16" y="22" width="288" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="About Me:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5Y-XS-hQS">
+                        <rect key="frame" x="118" y="11" width="85" height="21"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                        <color key="textColor" red="1" green="0.75686274509999996" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description Goes Here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qus-Zw-wnR">
+                        <rect key="frame" x="16" y="45" width="288" height="20.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="288" id="lRX-L7-g6D"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <color key="textColor" red="1" green="0.75686274509999996" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <size key="shadowOffset" width="0.0" height="0.0"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Posts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqY-J5-H53">
-                        <rect key="frame" x="129" y="134" width="63" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About Me:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5Y-XS-hQS">
-                        <rect key="frame" x="111" y="0.0" width="99" height="21"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                        <color key="textColor" red="1" green="0.75686274509999996" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Posts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="biq-nv-gQB">
+                        <rect key="frame" x="127" y="76" width="67" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="67" id="yKy-xt-IoV"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" red="0.25879859919999998" green="0.25884008409999998" blue="0.25878548620000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="74m-5u-CwU"/>
-                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="7ns-K4-veg"/>
-                    <constraint firstAttribute="trailing" secondItem="j5Y-XS-hQS" secondAttribute="trailing" constant="110" id="AdB-SA-632"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Qus-Zw-wnR" secondAttribute="bottom" constant="99" id="Euj-ek-aa5"/>
-                    <constraint firstItem="RqY-J5-H53" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="LOg-dg-Lj3"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Qus-Zw-wnR" secondAttribute="bottom" constant="99" id="Xbs-I5-G2x"/>
-                    <constraint firstItem="RqY-J5-H53" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="66.75" id="oMx-yg-gfb"/>
-                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="111" id="opJ-QA-2NQ"/>
-                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="11" id="qJ3-n5-ECA"/>
-                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ylo-mI-Fcr"/>
+                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="27a-tq-6hS"/>
+                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="fme-qi-13N"/>
+                    <constraint firstItem="biq-nv-gQB" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="hax-l7-i5y"/>
+                    <constraint firstItem="j5Y-XS-hQS" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="kWC-si-Mfv"/>
+                    <constraint firstAttribute="bottom" secondItem="biq-nv-gQB" secondAttribute="bottom" constant="10.5" id="mO4-FH-YaA"/>
+                    <constraint firstItem="Qus-Zw-wnR" firstAttribute="top" secondItem="j5Y-XS-hQS" secondAttribute="bottom" constant="13" id="nAM-9l-Xzo"/>
+                    <constraint firstAttribute="bottom" secondItem="Qus-Zw-wnR" secondAttribute="bottom" constant="39" id="xgP-q7-H3l"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -59,7 +61,7 @@
                 <outlet property="aboutMeLabel" destination="j5Y-XS-hQS" id="59b-lK-ubR"/>
                 <outlet property="descriptionLabel" destination="Qus-Zw-wnR" id="byL-9A-Fkn"/>
             </connections>
-            <point key="canvasLocation" x="35" y="129.5"/>
+            <point key="canvasLocation" x="-109" y="59.5"/>
         </tableViewCell>
     </objects>
 </document>
